# python-project-makefile-template

./: .gitignore  LICENSE  README.md  lint-requirements.txt  makefile  makefile.template  makefile_docgen.py  makefile_docs.md  pyproject.toml
.github/: requirements-all.txt  requirements-dev.txt  requirements-extras.txt  requirements.txt
.github/requirements/: requirements-all.txt  requirements-base.txt  requirements-dev.txt  requirements-extras.txt  requirements-groups.txt  requirements-lint.txt  requirements.txt
.github/workflows/: checks.yml  makefile-checks.yml
.meta/: typing-summary.toml
.meta/.type-errors/: basedpyright.txt  mypy.txt  ty.txt
.meta/local/: .commit_log
.meta/requirements/: requirements-all.txt  requirements-allalt.txt  requirements-base.txt  requirements-groups.txt  requirements-lint.txt  requirements.txt
.meta/scripts/: check_torch.py  docs_clean.py  export_requirements.py  generate_badge.py  get_commit_log.py  get_todos.py  get_version.py  make_docs.py  mypy_report.py  pdoc_markdown2_cli.py  recipe_info.py  typing_breakdown.py
docs/: index.html  make_docs.py  myproject.html  search.js  todo.html
docs/.resources/: make_docs.py
docs/.resources/css/: content.css
docs/.resources/templates/html/: module.html.jinja2
docs/_resources/: make_docs.py
docs/_resources/css/: content.css
docs/_resources/templates/html/: error.html.jinja2  frame.html.jinja2  index.html.jinja2  module.html.jinja2
docs/_resources/templates/markdown/: index.html.jinja2
docs/combined/: myproject.html  myproject.md  myproject.txt  myproject_gfm.md
docs/coverage/: coverage.txt
docs/coverage/html/: class_index.html  function_index.html  index.html  status.json  z_08898bbd1b55d912___init___py.html  z_08898bbd1b55d912_helloworld_py.html  z_08898bbd1b55d912_other_py.html  z_a44f0ac069e85531_test_makefile_py.html  z_a44f0ac069e85531_test_nothing_py.html
docs/myproject/: helloworld.html  other.html
docs/notebooks/: example.html  index.html  no_desc.html
docs/other/: lmcat.md  lmcat.txt  todo-inline-standard.md  todo-inline-table.md  todo-inline.html  todo-inline.jsonl  todo-inline.md
docs/resources/: make_docs.py
docs/resources/templates/html/: module.html.jinja2
docs/resources/templates/markdown/: module.html.jinja2
docs/templates/: todo-template.html
myproject/: __init__.py  helloworld.py  other.py
notebooks/: example.ipynb  no_desc.ipynb
scripts/: assemble.py  assemble_make.py  check_torch.py  docs_clean.py  export_requirements.py  get_commit_log.py  get_todos.py  get_version.py  make_docs.py  mypy_report.py  pdoc_markdown2_cli.py
scripts/make/: check_torch.py  docs_clean.py  export_requirements.py  generate_badge.py  get_commit_log.py  get_todos.py  get_version.py  make_docs.py  pdoc_markdown2_cli.py  recipe_info.py  typing_breakdown.py
tests/: test_makefile.py  test_nothing.py
